# pico-hello-world

./: CMakeLists.txt  main.cpp  shell.nix
